Fix navbar z-index

--- a/my-app/src/Main.css
+++ b/my-app/src/Main.css
@@ -119,7 +119,7 @@ a:hover, button:hover {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 1000;
 
   padding-top: 20px;
   padding-left: 25px;
